--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
 
 .header::after {
   content: "";
-  display: block;
   position: absolute;
   top: 0;
   left: 0;
@@ -332,7 +331,7 @@
 .intro__pic {
   flex-basis: 100%;
   height: 45vh;
-  background-image: url("greece.jpg");
+  background-image: url("./img/greece.jpg");
   background-size: cover;
   background-position: top;
   margin: 40px 0;
@@ -406,22 +405,6 @@
 
 .destination__pic:hover {
   transform: translateY(-5%);
-}
-
-.destinations__destination:nth-of-type(1) .destination__pic {
-  background-image: url("cuba.jpg");
-}
-
-.destinations__destination:nth-of-type(2) .destination__pic {
-  background-image: url("norway.jpg");
-}
-
-.destinations__destination:nth-of-type(3) .destination__pic {
-  background-image: url("usa.jpg");
-}
-
-.destinations__destination:nth-of-type(4) .destination__pic {
-  background-image: url("india.jpg");
 }
 
 .destinations__destination:nth-of-type(1).active {
@@ -672,7 +655,6 @@ article p {
 
 .footer__logo::after {
   content: "";
-  display: block;
   position: absolute;
   width: 60px;
   height: 1px;
