--- a/style.css
+++ b/style.css
@@ -4,8 +4,12 @@
   box-sizing: border-box;
   font-family: "Playfair Display", serif;
 }
+.wrapper {
+  max-width: 2000px;
+  margin: 0 auto;
+  overflow-x: hidden;
+}
 
-/* Nagłówek strony */
 .header {
   position: relative;
   height: 100vh;
@@ -17,6 +21,10 @@
   display: block;
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  -o-object-fit: cover;
+  object-position: 50% 50%;
+  -o-object-position: 50% 50%;
 }
 
 .header::after {
@@ -32,28 +40,30 @@
 .header__intro {
   color: white;
   position: absolute;
-  top: 40%;
-  left: 10%;
+  top: 30%;
+  width: 100%;
+  text-align: center;
   font-family: "Playfair Display", serif;
   z-index: 2;
+  font-size: 32px;
 }
 .header__button {
   position: absolute;
-  top: 55%;
-  left: 12%;
-  width: 160px;
-  height: 35px;
-  background-image: linear-gradient(45deg, #ff2d19, #8a251c, #cc2315);
-  color: #f4f4f4;
+  top: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 180px;
+  height: 45px;
+  background-image: rgba(100, 100, 100, 0.2);
+  color: black;
   font-size: 20px;
-  line-height: 35px;
+  line-height: 45px;
   z-index: 2;
   border: none;
   cursor: pointer;
   border-radius: 15px;
 }
 
-/*Kontener na kropki*/
 .header__dots {
   position: absolute;
   bottom: 3%;
@@ -62,7 +72,6 @@
   z-index: 2;
 }
 
-/*Kropki do banera*/
 .dots__span {
   display: inline-block;
   width: 10px;
@@ -76,7 +85,6 @@
   background-color: white;
 }
 
-/* Strzałka powrotu do góry strony*/
 .header__arrowUp {
   position: fixed;
   width: 25px;
@@ -105,7 +113,6 @@
   animation: movingArrow 1.5s linear infinite both;
 }
 
-/* Ciemny motyw */
 .header__theme {
   position: fixed;
   top: 3%;
@@ -136,7 +143,6 @@
   }
 }
 
-/*Nawigacja - menu*/
 .header__navigation {
   background-color: rgba(0, 0, 0, 0.7);
   position: fixed;
@@ -172,7 +178,6 @@
   line-height: 80px;
 }
 
-/*Animowana ikona burgera*/
 .header__burger {
   width: 30px;
   height: 30px;
@@ -202,13 +207,14 @@
   position: absolute;
   width: 100%;
   background-color: rgb(255, 255, 255);
-  height: 4px;
+  height: 2px;
+  border-radius: 5px;
+  transition: 0.5s linear;
 }
 
 .burger__span:nth-of-type(1) {
   top: calc(0% - 2px);
   transform: rotate(0deg);
-  transition: 0.5s linear;
   left: 0;
 }
 
@@ -221,10 +227,9 @@
 
 .burger__span:nth-of-type(2) {
   top: calc(50% - 2px);
-  width: 20%;
+  width: 40%;
   left: 50%;
   transform: translateX(-50%);
-  transition: 0.5s linear;
 }
 
 .burger__span:nth-of-type(2).dissappear {
@@ -234,7 +239,6 @@
 .burger__span:nth-of-type(3) {
   top: calc(100% - 2px);
   transform: rotate(0deg);
-  transition: 0.5s linear;
 }
 
 .burger__span:nth-of-type(3).move {
@@ -244,7 +248,6 @@
   width: 130%;
 }
 
-/* Sekcja 1*/
 .intro {
   padding: 50px;
   margin-bottom: 80px;
@@ -269,9 +272,14 @@
 }
 
 .article__foto {
-  float: right;
+  float: left;
   width: 40vw;
   height: 400px;
+  object-fit: cover;
+  -o-object-fit: cover;
+  object-position: 50% 50%;
+  -o-object-position: 50% 50%;
+  margin: 15px;
 }
 
 .article__h2 {
@@ -281,11 +289,10 @@
   font-size: 28px;
   letter-spacing: 1px;
   word-spacing: 3px;
+  display: none;
 }
 
 .article__p {
-  width: 40vw;
-  float: left;
   text-indent: 20px;
   text-align-last: right;
   padding-left: 25px;
@@ -342,7 +349,6 @@
 
 .details__intro > p {
   text-align: center;
-  flex-basis: 50%;
 }
 
 .details__offer {
@@ -508,7 +514,6 @@
   margin-right: 20px;
 }
 
-/*Formularz */
 .location__contact {
   flex-basis: 50%;
   display: flex;
@@ -567,7 +572,6 @@
   box-shadow: 0 0 3px 3px black;
 }
 
-/* FAQ section*/
 .faq {
   position: relative;
   font-family: "Playfair Display", serif;
@@ -594,10 +598,8 @@
   padding: 10px 15px;
 }
 
-/*Kontener dla zapytania i open box'a*/
 .question__name {
   display: flex;
-  /* height: 55px; */
   align-items: center;
   justify-content: space-between;
   margin-bottom: 15px;
@@ -614,7 +616,6 @@
   border-bottom: 1px solid white;
 }
 
-/*Box otwierający odpowiedź do FAQ*/
 .name__box {
   font-size: 35px;
   color: black;
@@ -634,7 +635,6 @@ article p {
   display: flex;
 }
 
-/* Footer strony - logo z paragrafu, mała lista, podpis*/
 .footer {
   background-color: black;
   display: flex;
@@ -785,12 +785,6 @@ article p {
     right: -100vw;
     width: 100vw;
     top: 15%;
-  }
-  .article__foto {
-    width: 40vw;
-  }
-  .article__p {
-    width: 60vw;
   }
   .header__button {
     top: 75%;
